[gd_scene load_steps=2 format=3 uid="uid://jr15xa6g2paw"]

[ext_resource type="Script" uid="uid://bgsgt0niuif7a" path="res://menu_bar/menu_bar.gd" id="2_dpqxi"]

[node name="MenuBar" type="MenuBar"]
layout_direction = 2
offset_right = 63.0
offset_bottom = 14.0
size_flags_horizontal = 0
size_flags_vertical = 0
prefer_global_menu = false
script = ExtResource("2_dpqxi")

[node name="FileMenu" type="PopupMenu" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
title = "File"
item_count = 1
item_0/text = "Get Info"
item_0/id = 0
item_0/disabled = true

[node name="SpecialMenu" type="PopupMenu" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
title = "Special"
size = Vector2i(117, 100)
item_count = 2
item_0/text = "Empty Trash"
item_0/id = 0
item_0/disabled = true
item_1/text = "Restart"
item_1/id = 1

[connection signal="id_pressed" from="FileMenu" to="." method="_on_file_menu_id_pressed"]
[connection signal="id_pressed" from="SpecialMenu" to="." method="_on_special_menu_id_pressed"]
